MCA App/Release/MCA Dev Org/src/objects/Application_Document__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Documents</relationshipLabel>
        <relationshipName>Application_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Document__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; + Attachment_Id__c, &quot;View&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Document</label>
        <type>Text</type>
    </fields>
    <label>Application Document</label>
    <nameField>
        <label>Application Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>